--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -15,6 +15,7 @@
     "hardhat": "^2.22.19"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.2.0",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5"
   }
