--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,24 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@web3-storage/w3up-client": "^17.1.2", 
+    "@web3-storage/w3up-client": "^17.1.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pg": "^8.13.3",
+    "sequelize": "^6.37.6",
+    "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
