--- a/fronted/package.json
+++ b/fronted/package.json
@@ -7,6 +7,8 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.2",
+    "dotenv": "^16.4.7",
     "init": "^0.1.2",
     "lucide-react": "^0.479.0",
     "react": "^18.2.0",
