[ADD] Attendind and sending request kardex function

--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@web3-storage/w3up-client": "^17.1.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
     "pg": "^8.13.3",
     "sequelize": "^6.37.6",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
