--- a/fronted/package.json
+++ b/fronted/package.json
@@ -8,12 +8,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.8.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "init": "^0.1.2",
     "lucide-react": "^0.479.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
