--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
     "sequelize": "^6.37.6",
     "sequelize-cli": "^6.6.2",
