--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@web3-storage/w3up-client": "^17.1.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "express": "^4.21.2",
+    "ipfs-http-client": "^60.0.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
