--- a/fronted/package.json
+++ b/fronted/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.2",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "ethers": "^6.13.7",
     "init": "^0.1.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
