--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "hardhat": "^2.22.19"
   },
